syntax = "proto3";
package cosmos_sdk.crypto.v1;

import "vendor/github.com/gogo/protobuf/gogoproto/gogo.proto";

option go_package = "github.com/cosmos/cosmos-sdk/crypto";
option (gogoproto.marshaler_all) = true;
option (gogoproto.unmarshaler_all) = true;
option (gogoproto.sizer_all) = true;

// PublicKey defines a proto message with a single oneof field that represents a
// public key as a byte slice.
//
// NOTE: Private keys must still be amino-encoded for backwards compatiblity.
message PublicKey {
  // pub defines an single supported public key type as a byte slice.
  oneof pub {
    bytes secp256k1 = 1;
    bytes ed25519 = 2;
    bytes multisig = 3;
  }
}
